--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
 </head>
 <body>
 
-  <main>
-    <img src="images/image-qr-code.png" alt="my qr-code"/>
-    <div class="main-text">
-      <p class="title">Improve your front-end skills by building projects</p>
-      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-    </div>
-  </main>
+  <div>
+    <main>
+      <img src="images/image-qr-code.png" alt="my qr-code"/>
+      <div class="main-text">
+        <p class="title">Improve your front-end skills by building projects</p>
+        <p class="subtitle">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      </div>
+    </main>  
+  </div>
+  
   
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
